Few More changes

--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,3 @@
 baseurl= https://www.demourl.com/
-endPointURL= https://account.ev-chargepoint.com/account/v1/driver/profile/balance""
+endPointURL= https://account.demo.com/account/v1/cusomer"
+
